# ArtReactor-Core

./: .gitignore  404.html  CHANGELOG.md  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  desktop.yml  docs.yml  lint.yml
advanced/database-manager/: index.html
advanced/logging-telemetry/: index.html
api/cli/: index.html
api/interfaces/: index.html
architecture/core-components/: index.html
architecture/data-flow/: index.html
architecture/event-system/: index.html
architecture/overview/: index.html
architecture/plugin-system/: index.html
artreactor/: app.py
artreactor/api/: decorators.py  dependencies.py  middleware.py
artreactor/cli/: main.py
artreactor/core/: decorators.py
artreactor/models/: __init__.py  api.py  domain.py  logging.py  plugin.py  telemetry.py
contributing/building-docs/: index.html
contributing/development/: index.html
contributing/testing/: index.html
docs/: README.md  architecture.md  index.md  usage.md
docs/advanced/: database-manager.md  logging-telemetry.md
docs/api/: cli.md  interfaces.md
docs/architecture/: core-components.md  data-flow.md  event-system.md  overview.md  plugin-system.md
docs/contributing/: building-docs.md  development.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/plugin-development/: agent-skills.md  best-practices.md  creating-plugins.md  getting-started.md  (+2 more)
scripts/: build.ps1  build.py  build_sidecar.py  health_check.py
search/: search_index.json
tests/: conftest.py
(+121 files in other folders)
